# calculatorPolish

./: .gitignore  CMakeLists.txt  calc.cpp
LatestworkingVersion/: CMakeLists.txt
LatestworkingVersion/include/: calc.h
LatestworkingVersion/src/: calc.cpp  list.cpp  main.cpp  test  test.cpp
include/: calc.h  list.h
src/: '  calc.cpp  error.cpp  main.cpp
tests/: strokefortest
